<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.revern.ormlite.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/cat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/cat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="16dp" />

    <EditText
        android:id="@+id/fav_food_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/favorite_food_id"
        android:inputType="number"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/insert_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:padding="16dp"
            android:onClick="onInsertCatClick"
            android:text="@string/insert_cat" />

        <TextView
            android:id="@+id/query_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="16dp"
            android:onClick="onQueryCatClick"
            android:text="@string/query_cat" />

        <TextView
            android:id="@+id/delete_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:padding="16dp"
            android:onClick="onDeleteCatClick"
            android:text="@string/delete_cat" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/food"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="16dp" />

    <EditText
        android:id="@+id/cat_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cat_id"
        android:inputType="number"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/insert_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:padding="16dp"
            android:onClick="onInsertFoodClick"
            android:text="@string/insert_food" />

        <TextView
            android:id="@+id/query_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="16dp"
            android:onClick="onQueryFoodClick"
            android:text="@string/query_food" />

        <TextView
            android:id="@+id/delete_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:padding="16dp"
            android:onClick="onDeleteFoodClick"
            android:text="@string/delete_food" />

    </LinearLayout>

</LinearLayout>
